--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,9 @@ __marimo__/
 
 # Streamlit
 .streamlit/secrets.toml
+
+# Devcontainer
+.devcontainer/
+
+# ChromaDB database
+chroma_server_data/
