Added web config panel and Qwen support, Version 0.1.0

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,13 @@ __marimo__/
 
 # Streamlit
 .streamlit/secrets.toml
+
+
+# ----------------------------------------------- Project Specific -----------------------------------------------
+
+# Telethon session
+base_session.session
+config_panel_session.session
+
+# Logs
+logs
